# VideoCaptioner_Z

./: .gitignore  .importlinter  AGENTS.md  README.md  THIRD_PARTY_NOTICES.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  model-targeted.yml  release-full.yml  runtime-targeted.yml
docs/: architecture.md  artifact-store.md  captioner_architecture_and_phase_manual_v1_en.md  error-model.md  invariants.md  journal-schema.md  known_validation_gaps.md  llm.md  manifest-schema.md  model_import_external.md  model_manager.md  model_sources.md  phase5_decision_record.md  recovery.md  runtime_builds.md  runtime_manager.md  runtime_worker_model_contracts.md  subtitle-formats.md  subtitle-policy.md  testing.md
docs/examples/: model-sources.toml
resources/i18n/: en.json  zh-CN.json
resources/prompts/: correct_source.v1.md  repair_structured.v1.md  repair_structured.v2.md  review_anomalies.v1.md  terminology.v1.md  terminology.v2.md  translate_fast.v1.md  translate_quality.v1.md
resources/runtime/: README.md
resources/tokenizers/: tokenizer-manifest.json
runtime_projects/faster-whisper-cpu/: pyproject.toml  runtime-build.toml
runtime_projects/mlx-whisper-metal/: pyproject.toml  runtime-build.toml
runtime_worker/: pyproject.toml
runtime_worker/src/captioner_runtime_worker/: __init__.py  __main__.py  build_info.py  protocol.py  transcript.py  worker.py
runtime_worker/src/captioner_runtime_worker/backends/: __init__.py  base.py  faster_whisper.py  mlx_whisper.py
scripts/: __init__.py  build_nuitka.py  build_runtime.py  check.py  check_forbidden_patterns.py  check_i18n.py  nuitka_cli_entry.py  run_phase2_real_gpu_smoke.py  run_subtitle_corpus.py  runtime_smoke.py  update_subtitle_goldens.py  validate_subtitle.py
src/captioner/: __init__.py  __main__.py  bootstrap.py  entrypoint.py  gui_bootstrap.py
src/captioner/adapters/: __init__.py  _probe.py
src/captioner/cli/: __init__.py  cli_entry.py  outcomes.py  output.py
src/captioner/core/: __init__.py
src/captioner/gui/: __init__.py  application_boundary.py  application_runner.py  batch_controller.py  composition.py  create_controller.py  diagnostics_controller.py  gui_entry.py  job_operations_controller.py  main_window.py  queue_table_model.py  recovery_controller.py  settings_controller.py
src/captioner/i18n/: __init__.py  catalog.py  locale.py  service.py  validation.py
src/captioner/infrastructure/: app_paths.py  clock.py  config.py  ids.py  logging.py  model_source_config.py  prompts.py  redaction.py
tests/: conftest.py  support.py
tests/contract/: test_entrypoint_imports.py  test_import_contracts.py  test_llm_cache.py  test_llm_client.py  test_no_model_sdk_imports.py  test_phase1_imports.py  test_phase6_ports.py  test_resource_boundaries.py  test_source_entrypoint.py  test_workflows.py
tests/fakes/: __init__.py  fake_local_model_inspector.py  fake_model_source.py  fake_runtime_doctor.py  in_memory_model_repository.py  in_memory_runtime_repository.py  phase6_values.py  scripted_worker_client.py
tests/fixtures/: README.md
tests/golden/: __init__.py  manifest.py  test_exporters.py  test_manifest.py  test_subtitle_tracks.py
tests/integration/: test_faster_whisper_smoke.py  test_ffmpeg_pipeline.py  test_llm_fake_server.py
tests/model/: test_filesystem_model_validation.py  test_model_load_verifier.py  test_model_manager.py
tests/model_sources/: test_sources.py
tests/packaging/: test_build_nuitka.py  test_packaged_resource_layout.py  test_packaged_subtitle_corpus.py
tests/property/: __init__.py  test_cache_keys.py  test_export_roundtrip.py  test_i18n_placeholders.py  test_job_transitions.py  test_journal_replay.py  test_llm_cache_keys.py  test_llm_chunking.py  test_llm_response_validation.py  test_locale_normalization.py  test_publication_properties.py  test_runtime_paths.py  test_segmentation.py  test_simple_segmentation_invariants.py  test_srt_timestamps.py  test_subtitle_track.py  test_transcript_invariants.py  test_translated_track.py  test_unicode_metrics.py
tests/recovery/: __init__.py  support.py  test_artifact_integrity_recovery.py  test_batch_cancel.py  test_cancel.py  test_config_invalidation.py  test_config_update_atomicity.py  test_journal_tail_recovery.py  test_lease_concurrency.py  test_llm_chunk_resume.py  test_manifest_recovery.py  test_multi_artifact_integrity.py  test_multi_job_config.py  test_output_collision.py  test_post_commit_failures.py  test_publish_recovery.py  test_resume.py  test_retry.py  test_retry_terminal_jobs.py  test_stage_crash_matrix.py  test_status_integrity.py  test_translate_recovery.py
tests/runtime/: __init__.py  test_build_runtime.py  test_filesystem_runtime_repository.py  test_host_probe.py  test_process_tree.py  test_runtime_archive.py  test_runtime_manager.py  test_runtime_package_source.py
tests/runtime_worker/: __init__.py  test_subprocess_worker_client.py  test_worker_backed_asr.py  test_worker_package.py
tests/security/: __init__.py  test_runtime_path_containment.py
tests/unit/: test_app_error.py  test_app_paths.py  test_application_runner.py  test_ass_exporter.py  test_batch_commands.py  test_batch_commands_service.py  test_batch_controller.py  test_batch_lease.py  test_bootstrap_llm_runtime.py  test_cancellation.py  test_cli_entry.py  test_configuration_service.py  test_content_addressed_artifact_store.py  test_create_controller.py  test_create_page.py  test_cuda_runtime_environment.py  test_diagnostics_controller.py  test_diagnostics_page.py  test_diagnostics_service.py  test_doctor.py  test_domain_codecs.py  test_durable_domain.py  test_durable_pipeline.py  test_entrypoint.py  test_execution_coordinator.py  test_fake_adapters.py  test_fast_profile_bootstrap.py  test_fast_profile_edges.py  test_faster_whisper_adapter.py  test_ffmpeg_audio_adapter.py  test_ffprobe_adapter.py  test_filesystem_batch_catalog.py  test_filesystem_input_discovery.py  test_forbidden_checker.py  test_gui_acceptance.py  test_gui_application_boundary.py  test_gui_entry.py  test_history_page.py  test_i18n_catalog.py  test_i18n_service.py  (+65 more)
(+254 files in other folders)
