[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "captioner-runtime-worker"
version = "1.0.0"
description = "Isolated Captioner Runtime Worker protocol package"
requires-python = ">=3.12.9,<3.13"
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/captioner_runtime_worker"]
